--- a/package.json
+++ b/package.json
@@ -98,6 +98,7 @@
     "@chainsafe/libp2p-noise": "^11.0.1",
     "@grpc/grpc-js": "^1.8.12",
     "@grpc/proto-loader": "^0.7.6",
+    "chunk": "0.0.3",
     "daisyui": "^2.51.5",
     "electron-debug": "^3.2.0",
     "electron-log": "^4.4.8",
@@ -105,7 +106,8 @@
     "get-port": "^6.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.8.1"
+    "react-router-dom": "^6.8.1",
+    "recoil": "^0.7.7"
   },
   "devDependencies": {
     "@electron/notarize": "^1.2.3",
@@ -115,6 +117,7 @@
     "@teamsupercell/typings-for-css-modules-loader": "^2.5.2",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
+    "@types/chunk": "0.0.0",
     "@types/jest": "^29.4.0",
     "@types/node": "18.13.0",
     "@types/react": "^18.0.27",
@@ -156,6 +159,7 @@
     "jest-environment-jsdom": "^29.4.2",
     "mini-css-extract-plugin": "^2.7.2",
     "postcss": "^8.4.21",
+    "postcss-loader": "^7.1.0",
     "prettier": "^2.8.4",
     "react-refresh": "^0.14.0",
     "react-test-renderer": "^18.2.0",
